webkit (1.6.1-2) unstable; urgency=low

  * Rename source package back to webkit
  * debian/control:
  - Build-Depend on gawk, since our GNUmakefile.in has lines that are too
    long for mawk, which results in a broken GNUmakefile

 -- Gustavo Noronha Silva <kov@debian.org>  Mon, 17 Oct 2011 22:07:25 -0200

webkitgtk+ (1.6.1-1) experimental; urgency=low

  * New upstream release
  * debian/patches/01_fix-introspection.patch:
  - Removed; applied upstream
  * debian/patches/02_notebook_scroll.patch:
  - Patch by Josselin Mouette <joss@debian.org> to ignore alt+wheel
    (Closes: #640980)

 -- Gustavo Noronha Silva <kov@debian.org>  Mon, 26 Sep 2011 23:24:37 -0300

webkitgtk+ (1.5.2-1) experimental; urgency=low

  * New upstream development release
  * debian/patches/01_spoof-ua-for-calendar.patch:
  - Remove; applied upstream
  * debian/patches/01_fix-introspection.patch:
  - Fix the introspection build

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 24 Aug 2011 21:43:19 -0300

webkitgtk+ (1.4.2-2) unstable; urgency=low

  * debian/rules:
  - fix armhf special-casing to actually work as intended; thanks to
    mbiebl for finding the issue and helping resolve it
  * debian/watch:
  - provided by Michael Biebl <biebl@debian.org>; thanks! (Closes: #633446)
  * debian/patches/01_spoof-ua-for-calendar.patch:
  - steal patch from upstream (on track for 1.4.3) to make Google Calendar
    behave and not give us the mobile version
  * debian/control:
  - Build-Depend on libjpeg-dev instead of libjpeg62-dev (See #635287)
  - Re-add the libwebkit-dev package to automatically upgrade packages
    using the GTK+ 2.0 version of WebKitGTK+.
  - Fix capitalization of GTK+ in the description (Closes: #611871)
  - Set Homepage to webkitgtk.org instead of webkit.org (Closes: #589431)
  - Update to the new GI mini-policy by making the -dev packages depend on
    the appropriate gir1.2-webkit-?.0 packages (Closes: #633962)
