@@ -105,7 +105,7 @@ build-stamp:
 			Source/WebKit/gtk/docs/; \
 		cd build-$${version}/Source/WebKit/gtk/docs; \
 		make docs || make docs; \
-		cd ..; \
+		cd ../../../../../; \
 	done
 
 	touch $@
@@ -125,9 +125,8 @@ ifeq (2.0,$(filter 2.0,$(GTK_VERSIONS)))
 	chrpath -d debian/tmp-2.0/usr/lib/webkitgtk-1.0-0/libexec/GtkLauncher
 
 	install -d -m 755 debian/tmp-2.0/usr/share/doc/libwebkitgtk-dev/html
-	# FIXME: broken upstream
-	#install -m 644 Source/WebKit/gtk/docs/html/* \
-	#	debian/tmp-2.0/usr/share/doc/libwebkitgtk-dev/html/
+	install -m 644 build-2.0/Source/WebKit/gtk/docs/html/* \
+		debian/tmp-2.0/usr/share/doc/libwebkitgtk-dev/html/
 endif
 
 ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
@@ -137,9 +136,8 @@ ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
 	chrpath -d debian/tmp-3.0/usr/lib/webkitgtk-3.0-0/libexec/GtkLauncher
 
 	install -d -m 755 debian/tmp-3.0/usr/share/doc/libwebkitgtk-3.0-dev/html
-	# FIXME: broken upstream
-	# install -m 644 Source/WebKit/gtk/docs/html/* \
-	# 	debian/tmp-3.0/usr/share/doc/libwebkitgtk-3.0-dev/html/
+	install -m 644 build-3.0/Source/WebKit/gtk/docs/html/* \
+	 	debian/tmp-3.0/usr/share/doc/libwebkitgtk-3.0-dev/html/
 endif
 
 	touch $@
