@@ -4,8 +4,10 @@ webkit (1.6.1-2) unstable; urgency=low
   * debian/control:
   - Build-Depend on gawk, since our GNUmakefile.in has lines that are too
     long for mawk, which results in a broken GNUmakefile
+  * debian/rules:
+  - re-enable installing documentation
 
- -- Gustavo Noronha Silva <kov@debian.org>  Mon, 17 Oct 2011 22:07:25 -0200
+ -- Gustavo Noronha Silva <kov@debian.org>  Tue, 18 Oct 2011 09:59:20 -0200
 
 webkitgtk+ (1.6.1-1) experimental; urgency=low
 
